# aiAutoTest

./: .gitignore  CLAUDE.md  F1.3_用户信息修改测试点.xmind  README.md  case.json  hello.txt  main.py  pyproject.toml  skills-lock.json  skills_api.json  skills_sh.html  temp_fix_encoding.ps1  temp_parse_check.ps1  test.txt  test_wiki_blocks.py  update_headers.py
.claude/: settings.json  settings.local.json
.claude/skills/bug-rate/: README.md  SKILL.md  memory.md
.claude/skills/db-connector/: skill.md
.claude/skills/mineru-document-extractor/: SKILL.md  _meta.json
.claude/skills/prod-rpa-checker/: SKILL.md  config.yaml  run_afternoon_silent.ps1  run_check.py  run_check_silent.ps1  run_check_silent.vbs  run_morning_silent.ps1  run_silent.ps1  setup_dual_task.ps1  setup_task.ps1
.claude/skills/profit-sum/: SKILL.md  memory.md
.claude/skills/resume-optimizer/: SKILL.md
.claude/skills/retail-revenue/: README.md  SKILL.md  data-workflow.md  memory.md  海南零售侧收入基础数据（适配技能retail-revenue）.txt
.claude/skills/sc-electricity-excess-deficit-settlement/: SKILL.md
.github/: GitHub Actions技术方案.md
.github/workflows/: rpa-check.yml
fastapi_oss_mysql_backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
fastapi_oss_mysql_backend/.github/workflows/: ci.yml
fastapi_oss_mysql_backend/alembic/: env.py  script.py.mako
fastapi_oss_mysql_backend/alembic/versions/: .gitkeep
fastapi_oss_mysql_backend/scripts/: db_migrate.py  init_data.py  start_server.sh
fastapi_oss_mysql_backend/scripts/mysql/: init.sql
fastapi_oss_mysql_backend/src/: __init__.py  main.py  py.typed
fastapi_oss_mysql_backend/src/api/: router.py
fastapi_oss_mysql_backend/src/api/v1/: __init__.py  auth.py  file.py  health.py  user.py
fastapi_oss_mysql_backend/src/common/: __init__.py  dependencies.py  middleware.py  pagination.py  rate_limit.py  response.py  utils.py
fastapi_oss_mysql_backend/src/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  oss_client.py  security.py
fastapi_oss_mysql_backend/src/crud/: __init__.py  base.py  file.py  user.py
fastapi_oss_mysql_backend/src/db/: __init__.py  base.py  redis_client.py
fastapi_oss_mysql_backend/src/db/models/: __init__.py  file.py  user.py
fastapi_oss_mysql_backend/src/schemas/: __init__.py  auth_schema.py  common.py  file_schema.py  user_schema.py
fastapi_oss_mysql_backend/src/services/: auth_service.py  file_service.py  user_service.py
fastapi_oss_mysql_backend/tests/: conftest.py  test_auth_api.py  test_file_api.py  test_user_api.py
lee/: bug_rate_calculator.py
lee/01helloWorld/: 01大模型交互的第一个程序.py  02langchain对大模型的统一封装.py
lee/02提示词工程/: 01提示词的编写格式.py  02多轮对话的提示词的简单实现.py  03大模型上传图片的提示词构成.py  04提示词优化方案.py  05含有消息占位符的提示模板.py  06少量样本提示.py  07提示词模板.py  demo.py
lee/03langchain框架/: 02模型的基本配置.py  03模型调用的结构化输出.py  04agent动态配置模型.py  05agent的核心组件工具的定义和使用.py  06在agent中集成langchain生态提供的工具.py  07agent执行结果的输出模式.py  08工具中操作运行不可变上下文数据context.py  09工具中操作运行可变上下文数据state.py  10实时流式输出(stream_writer)  11agent接入短期记忆.py  12长期记忆的实现方式.py  电力交易平台数据处理.py
lee/03langchain框架/01langchain入门/: 创建第一个智能体.py
lee/03langchain框架/02agent核心组件模型和工具/: 01模型的基本配置.py  02模型调用的结构化输出.py  03agent动态配置模型(多模型).py  04agent的核心组件工具的定义和使用.py  05在agent中集成langchain生态提供的工具.py  06agent执行结果的输出模式.py  07工具中操作运行不可变上下文数据context.py  08工具中操作运行可变上下文数据state.py  09实时流式输出(stream_writer).py
lee/03langchain框架/03agent记忆处理/: agent接入短期记忆.py  长期记忆的实现方式.py
lee/03langchain框架/05人工审核机制/: agent.py  tools.py
lee/03langchain框架/06Agent快速接入Mcp服务和异步编程扩展/: 01python异步编程知识补充.py  02关于python魔术方法的扩展.py  03可迭代对象和迭代器.py  04异步迭代器.py  05生成器和异步生成器.py  06异步生成器的语法规则.py  07异步上下文对象.py  08加载playwrightmcp的工具包.py
lee/03langchain框架/07Agent接入MCP和Skills/: 01mcp服务开发.py  02MCP客户端的创建和加载mcp服务的工具.py  03接入了mcp服务的agent.py  04使用deepagent快速框架智能体.py  AGENT.md
lee/03langchain框架/08langgraph编排Agent流程/: 01langgraph的编排Agent执行的流程.py  02langgraph的编排工作流.py  03条件边.py  04循环边界.py
lee/03langchain框架/09Langgraph嵌套工作流编排和状态共享/: 01langgraph工作流的并发编排.py  02嵌套工作流的状态共享机制.py  (+3 more)
lee/04项目RAG知识库构建/: demo.py
lee/06多模型路由与对比实验/: pyrightconfig.json
lee/basicPromptTemplate/: 01Prompt.py  leeChatPromptTemplate.py  leeFewShotPromptTemplate.py  leePromptTemplate.py  ok.py
lee/langchain框架/: 01创建第一个智能体
lee/myMCP/: 01mcp服务的开发.py  02在agent中接入mcp服务.py  mcp_server.py  在工作流中接入MCP.py
scripts/: enhance_image.py
temp_test/: test.py
(+361 files in other folders)
