[project]
name = "aiautotest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "langsmith>=0.7.30",
    "nest-asyncio>=1.6.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "rich>=14.0.0",
]
