[project]
name = "aiautotest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "deepagents>=0.6.3",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "langsmith>=0.7.30",
    "lightrag-hku[api]>=1.4.16",
    "llama-index>=0.14.22",
    "llama-index-embeddings-openai-like>=0.3.1",
    "llama-index-llms-openai-like>=0.7.2",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "nest-asyncio>=1.6.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "rich>=14.0.0",
]
