[project]
name = "fastapi-oss-mysql-backend"
version = "0.1.0"
description = "FastAPI + MySQL + OSS 后端工程模板"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "lee", email = "lee@example.com" },
]
keywords = ["fastapi", "mysql", "oss", "backend", "uv"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiomysql>=0.2.0",
    "alembic>=1.13.3",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.12",
    "oss2>=2.18.5",
    "aiofiles>=24.1.0",
    "redis[hiredis]>=5.2.0",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "email-validator>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/lee/fastapi-oss-mysql-backend"
Issues = "https://github.com/lee/fastapi-oss-mysql-backend/issues"

[project.scripts]
start = "src.main:run"
migrate = "scripts.db_migrate:main"
init-data = "scripts.init_data:main"

# 开发依赖（uv sync --extra dev 安装）
[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.2",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "types-passlib>=1.7.7.20240819",
    "faker>=30.0.0",
]

# ============= 工具配置 =============

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions", "temp", "logs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TCH", "RUF"]
ignore = ["E501", "B008", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "N802", "N803"]
"alembic/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = false
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["alembic/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: 慢测试",
    "integration: 集成测试",
    "unit: 单元测试",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

# ============= 构建系统 =============
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["src/py.typed"]
